--- a/app/src/main/res/layout/meeting_item.xml
+++ b/app/src/main/res/layout/meeting_item.xml
@@ -105,7 +105,7 @@
                             android:layout_height="wrap_content">
                 <ImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/profile_image"
+                        android:id="@+id/profileImageIv1"
                         android:layout_width="19dp"
                         android:layout_height="19dp"
                         android:src="@drawable/ic_android_black_24dp"
@@ -114,6 +114,7 @@
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="19dp"
                         android:layout_height="19dp"
+                        android:id="@+id/profileImageIv2"
                         android:src="@drawable/ic_android_black_24dp"
                         android:layout_marginLeft="10dp"
                 />
@@ -121,6 +122,7 @@
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="19dp"
                         android:layout_height="19dp"
+                        android:id="@+id/profileImageIv3"
                         android:src="@drawable/ic_android_black_24dp"
                         android:layout_marginLeft="20dp"/>
             </RelativeLayout>
